--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -25,3 +25,7 @@ Remove child links from book navigation on a flattened page
 Flat Book 6.x-1.21, 2010-09-23
 ------------------------------
 Fixed bugs in caching and flatten logic
+
+Flat Book 6.x-1.23, 2010-09-23
+------------------------------
+Fixed another minor caching bug
