--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -29,3 +29,7 @@ Fixed bugs in caching and flatten logic
 Flat Book 6.x-1.23, 2010-09-23
 ------------------------------
 Fixed another minor caching bug
+
+Flat Book 6.x-1.24, 2010-09-28
+------------------------------
+Fixed improper redirection for aliased paths
